2006-08-17 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: unreverse the argument order for
	CMD_CHIP_ERASE_HVSP; Atmel says AVR068 is right, and
	stk500.exe is wrong.
	* configure.ac (AC_CHECK_LIB[usb]): Fix the generation
	of HAVE_LIBUSB in ac_cfg.h.

2006-08-17 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Neil Davey:
	patch #4539: Ability to control the bit clock (usleep) delay
	for ppi interface
	* bitbang.c: Implement bitbang_delay() and its calibration.
	* bitbang.h: Declare bitbang_delay().
	* main.c: Add the ispdelay option (-i).
	* pgm.h (struct programmer_t): Add the ispdelay parameter.
	* par.c: Add calls to bitbang_delay() when requested.
	* serbb_posix.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* avrdude.1: Document the new -i option.
	* doc/avrdude.texi: (Ditto.)

2006-08-14 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by <chris@awaretechs.com>:
	* avrdude.conf.in (ATmega48, ATmega88, ATmega168): patch #5100:
	mega88 EEPROM support (extended for ATmega48 and ATmega168 - jw).

2006-08-14 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by <eolson@mit.edu>:
	* stk500v2.c (stk500v2_open): patch #5273: Emit error message
	if user requests usb and no libusb support

2006-08-14 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add HVSP/PP mode parameters for all AVRs.

2006-08-13 Joerg Wunsch <j@uriah.heep.sax.de>

	* tools: New directory.
	* tools/get-hv-params.xsl: New file, extract high-voltage
	programming parameters from Atmel XML files, and produce
	an avrdude.conf[.in] snippet.

2006-08-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac (AC_CHECK_LIB([usb]): implement a private LIBUSB
	macro to add this library to, to prevent it from being
	automatically linked to all binaries.  This should fix the Win32
	build of loaddrv.
	* Makefile.am (avrdude_LDADD): add LIBUSB here.

2006-08-10 Eric B. Weddington <eweddington@cso.atmel.com>

	Contributed by Bob Paddock <graceindustries@gmail.com>